# libaxl

./: CMakeLists.txt  build_axl_cmake_linux64.py  build_axl_linux64.py  run_test.sh  run_test_freeBSD32.sh  run_test_freeBSD64.sh
babel/: CMakeLists.txt
ns/: CMakeLists.txt
src/: CMakeLists.txt  axl_config.h.in
test/: CMakeLists.txt  test_01.c
