MESSAGE("ENTERED AXL-NS SOURCE DIRECTORY")

set (AXL_NS_SOURCES		axl_ns_doc.c
						axl_ns_node.c)

set (AXL_NS_SOURCES_HEADER 	axl_ns_doc.h
							axl_ns.h
							axl_ns_node.h)
	
source_group("Headerfiles" FILES ${AXL_SOURCES_HEADER})
source_group("Sourcefiles" FILES ${AXL_SOURCES})


if (${AXL_TARGET_PLATFORM} STREQUAL linux_x86-64)
  
  ADD_DEFINITIONS ("-m64")
  set(CMAKE_CXX_FLAGS "-m64")
  set(PREPROCESSOR_DEF -DGCC4)
  
  set(TARGET_NS axl-ns)

  set(IS64BIT true)

  set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)

message (STATUS "CMAKE PROJECT_SOURCE_DIR    ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE (STATUS "CMAKE_BINARY_DIR:           ${CMAKE_BINARY_DIR}" )
#MESSAGE(STATUS "CMAKE_PREFIX_PATH:         " ${CMAKE_PREFIX_PATH} )
MESSAGE (STATUS "LIBRARY_OUTPUT_DIRECTORY:   ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
MESSAGE (STATUS "CMAKE_FIND_LIBRARY_PREFIXES:${CMAKE_FIND_LIBRARY_PREFIXES} ")
MESSAGE (STATUS "CMAKE_FIND_LIBRARY_SUFFIXES:${CMAKE_FIND_LIBRARY_SUFFIXES} ")



endif (${AXL_TARGET_PLATFORM} STREQUAL linux_x86-64)

ADD_LIBRARY( ${TARGET_NS} SHARED ${AXL_NS_SOURCES_HEADER} ${AXL_NS_SOURCES})
set_target_properties(${TARGET_NS} PROPERTIES PREFIX "lib")

INCLUDE_DIRECTORIES (.)
INCLUDE_DIRECTORIES (../src)

ADD_DEFINITIONS (${PREPROCESSOR_DEF})

TARGET_LINK_LIBRARIES(${TARGET_NS}) 
INSTALL (TARGETS ${TARGET_NS} DESTINATION ${CMAKE_BINARY_DIR}/build/lib)








