MESSAGE("ENTERED AXL-NS SOURCE DIRECTORY")

set (AXL_NS_SOURCES axl_ns_doc.c
		    axl_ns_node.c)

set (AXL_NS_SOURCES_HEADER axl_ns_doc.h
			   axl_ns.h
			   axl_ns_node.h)
	
source_group("Headerfiles" FILES ${AXL_SOURCES_HEADER})
source_group("Sourcefiles" FILES ${AXL_SOURCES})


if (${AXL_TARGET_PLATFORM} STREQUAL linux_x86-64)
  
  set(PREPROCESSOR_DEF -Wall -Werror -g -ansi -DVERSION=\"0.7.1.b3508\" -DPACKAGE_DTD_DIR=\"/usr/local/share\" -DPACKAGE_TOP_DIR=\"..\" -D__axl_disable_broken_bool_def__ -DSHOW_DEBUG_LOG -DPIC)
  set(CMAKE_SHARED_LINKER_FLAGS -O2)
  set(AXL_NS_LOCAL axl-ns)
  set(AXL_NS_LOCAL_STATIC axl-ns_static)
  set(AXL_NS_LIB_NAME ${AXL_NS_LOCAL} PARENT_SCOPE)
  set(IS64BIT true)

  set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
  set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/static)

message (STATUS "CMAKE PROJECT_SOURCE_DIR    ${CMAKE_CURRENT_SOURCE_DIR}")
MESSAGE (STATUS "CMAKE_BINARY_DIR:           ${CMAKE_BINARY_DIR}" )
#MESSAGE(STATUS "CMAKE_PREFIX_PATH:         " ${CMAKE_PREFIX_PATH} )
MESSAGE (STATUS "LIBRARY_OUTPUT_DIRECTORY:   ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
#MESSAGE (STATUS "CMAKE_FIND_LIBRARY_PREFIXES:${CMAKE_FIND_LIBRARY_PREFIXES} ")
#MESSAGE (STATUS "CMAKE_FIND_LIBRARY_SUFFIXES:${CMAKE_FIND_LIBRARY_SUFFIXES} ")

endif (${AXL_TARGET_PLATFORM} STREQUAL linux_x86-64)

INCLUDE_DIRECTORIES (.)
INCLUDE_DIRECTORIES (../src)
ADD_DEFINITIONS (${PREPROCESSOR_DEF})

ADD_LIBRARY( ${AXL_NS_LOCAL}        SHARED ${AXL_NS_SOURCES_HEADER} ${AXL_NS_SOURCES})
ADD_LIBRARY( ${AXL_NS_LOCAL_STATIC} STATIC ${AXL_NS_SOURCES_HEADER} ${AXL_NS_SOURCES})

set_target_properties(${AXL_NS_LOCAL_STATIC}  PROPERTIES OUTPUT_NAME ${AXL_NS_LOCAL})

INSTALL (TARGETS ${AXL_NS_LOCAL} DESTINATION ${CMAKE_BINARY_DIR}/build/lib)
INSTALL (TARGETS ${AXL_NS_LOCAL_STATIC} DESTINATION ${CMAKE_BINARY_DIR}/build/static)






